Successfully established connection to the Database

--- a/Florentina_Infinion_Assessment.API/appsettings.json
+++ b/Florentina_Infinion_Assessment.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ProductsConnectionString": "Server=desktop-jm0jt0v;Initial Catalog=ProductsDb;Integrated Security=True;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
