Updated Email implementation and Completed Assessment

--- a/Florentina_Infinion_Assessment.API/appsettings.json
+++ b/Florentina_Infinion_Assessment.API/appsettings.json
@@ -20,7 +20,7 @@
     "Host": "smtp.gmail.com",
     "Port": 587,
     "Username": "florentinaantigha27@gmail.com",
-    "Password": "hnhy fcsc goce jlf"
+    "Password": "jeqd kcac ndau qddq"
   },
 
   "AllowedHosts": "*"
